--- a/frontend/style.css
+++ b/frontend/style.css
@@ -10,6 +10,10 @@ body {
     background-color: #FFF8DC;
 }
 
+.height-main {
+    height: calc(100vh - 58.39px);
+}
+
 .header {
     color: #FFFFFF;
     padding: 10px 30px;
@@ -48,13 +52,20 @@ body {
 }
 
 .animal-card {
-    width: 30%;
     background-color: #FFFFFF;
     font-family: 'Inter';
     padding: 0px;
     border-radius: 10px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
+    cursor: pointer;
+    transition: all .2s;
+    position: relative;
+}
+
+.animal-card:hover  {
+    scale: 1.05;
+    box-shadow: 0 2px 10px 4px rgba(0, 0, 0, 0.1);
 }
 
 .animal-card .foto {
@@ -85,3 +96,23 @@ body {
     border-bottom-left-radius: 5px;
 }
 
+.grid {
+    display: grid;
+    grid-template-columns: 30% 30% 30%;
+    grid-gap: 5%;
+    margin-left: 5%;
+    margin-right: 5%;
+}
+
+.danger {
+    color: #eb143f;
+    font-size: 1.7rem;
+    position: absolute;
+    bottom: -10px;
+    right: -8px;
+}
+
+.danger:hover {
+    box-shadow: 0px 0px 10px 3px rgb(247 8 8 / 53%);
+    border-radius: 50%;
+}
