--- a/frontend/style.css
+++ b/frontend/style.css
@@ -85,6 +85,7 @@ body {
     font-weight: bold;
     margin: 0 0 10px;
     font-size: 2rem;
+    text-align: center;
 }
 
 .animal-card .infos p {
@@ -117,6 +118,7 @@ body {
 .grid {
     display: grid;
     grid-template-columns: 30% 30% 30%;
+    grid-template-columns: repeat(3, 30%);
     grid-gap: 5%;
     margin-left: 5%;
     margin-right: 5%;
@@ -430,4 +432,9 @@ body {
 .denuncias-anuncio-group div i{
     margin-left: 10px;
     font-size: 1.3rem;
+}
+
+a{
+    color: inherit;
+    text-decoration: none;
 }
